--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "mongoose": "^7.4.1",
+    "mongoose-autopopulate": "^1.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
