--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "mongoose": "^7.4.1",
     "mongoose-autopopulate": "^1.0.1",
     "reflect-metadata": "^0.1.13",
