--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^10.1.0",
     "@nestjs/mongoose": "^10.0.1",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^7.1.6",
     "bcrypt": "^5.1.0",
@@ -32,6 +34,9 @@
     "class-validator": "^0.14.0",
     "mongoose": "^7.4.1",
     "mongoose-autopopulate": "^1.0.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -45,6 +50,8 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.9",
+    "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
